Closed Bug 17176 Opened 26 years ago Closed 26 years ago

[DOGFOOD] [Reqression] Can't save attachment

Categories

(MailNews Core :: Backend, defect, P3)

All
Other
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: pmock, Assigned: jefft)

Details

Build Date & Platform Bug Found: Win32 commercial seamonkey build 1999-10-22-15-m11 installed on P166 Win98 MacOS commercial seamonkey build 1999-10-22-08-m11 installed on G3/400 OS 8.5.1 Linux commercial seamonkey build 1999-10-22-08-m11 installed on P200 RedHat 6.1 Overview Description: You can not save a file attachment. I sent a couple of message that contain one file attachment, jpeg and gif. The message was sent from Solaris 4.7 Communicator RTM. The image was displayed correctly. I clicked on the attachment envelop and selected the single attachment. I gave it a name tried to saved. I received an error in the ms-dos/terminal window. Steps to Reproduce: 1) From Communicator 4.x, send a message with a file jpeg/gif file attachment 2 [details] [diff] [review]) From Seamonkey retrieve the message and view it. The gif/jpeg file should be displayed inline 3) Click on the attachment envelop on the message header. The name of the attachment should pop up. 4) Select the attachment name The save attachment dialog appears 5) Type in a name and click save 6) Look for the file attachment in file manager The attachment has not been saved Actual Results: No file attachment save. Error in message in terminal window. Expected Results: The attachment should have been saved Additional Builds and Platforms Tested On: Additional Information:
Here is the text from Linux... JavaScript Error: uncaught exception: [Exception... "Component returned failure code: 0x8000ffff (NS_ERROR_UNEXPECTED) [nsIMessenger.openAttachment]" nsresult: "0x8000ffff (NS_ERROR_UNEXPECTED)" location: "JS frame :: chrome://messenger/content/attach.js :: OpenAttachURL :: line 36" data: no]
QA Contact: lchiang → pmock
Changing qa assigned to pmock@netscape.com
fyi Problem is reproducible on today Linux commerical seamonkey 1999-10-25-08-m11.
Status: NEW → ASSIGNED
Summary: [Reqression] Can't save attachment → [DOGFOOD] [Reqression] Can't save attachment
Target Milestone: M11
Smell like dogfood to me.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
We are not generating message uri correctly, missing second slash after "imap_message:/" nsImapUrl.cpp changed.
Status: RESOLVED → VERIFIED
Verified as fixed under POP and IMAP. I was able to save jpeg and gif file without any problem. The saved attachment were viewable in 4.7. The builds that I used were: ftp://sweetlou/products/client/seamonkey/windows/32bit/x86/1999-11-10-17-M11/bac kup/install.exe ftp://sweetlou/products/client/seamonkey/macos/8.x/ppc/1999-11-11-11-M11/netscap e5-mac-M11.sea.bin ftp://sweetlou/products/client/seamonkey/unix/linux_glibc/2.2/x86/1999-11-10-17- M11/netscape-i686-pc-linux-gnu.tar.gz
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.