fixed bug 17176 -- [DOGFOOD] [Reqression] Can't save attachment; we are not generating message uri correctly; r=mscott